config/deploy/k8s-doks/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
  annotations:
    kubernetes.io/description: "Backend deployment - DO NOT SCALE beyond 1 replica"
spec:
  replicas: 1
  strategy:
    type: Recreate # Ensures no more than 1 pod exists during updates
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      restartPolicy: Always # Update the restart policy to "Always"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - db
            topologyKey: kubernetes.io/hostname
      containers:
        - name: backend 
          image: ${DOCKER_USERNAME}/backend:${DOCKER_TAG}
          imagePullPolicy: Always
          #command: ["/app/main"] # hanlded by the docker file
          ports:
            - containerPort: 5058
          readinessProbe:
            httpGet:
              path: /healthz # add a trivial handler that just returns 200
              port: 5058
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5058
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5058
      targetPort: 5058
  type: ClusterIP
