config/deploy/k8s-doks/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: ${DOCKER_USERNAME}/db:${DOCKER_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
          volumeMounts:
            - name: db-pvc
              mountPath: /home/postgres/pgdata
      volumes:
        - name: db-pvc
          persistentVolumeClaim:
            claimName: db-pvc
      terminationGracePeriodSeconds: 90

---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
